<resources>
    <string name="app_name">SimpleLife</string>
    <string name="title_activity_simple_about_us">simpleAboutUs</string>
    <string name="title_activity_simple_profile">SimpleProfile</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_simple_content">SimpleContent</string>
    <string name="title_activity_simple_schedule">SimpleSchedule</string>
    <string name="facebook_app_id">140392023323624</string>
    <string name="menu_name"> Menu</string>
    <string name="settings_name"> Settings</string>
    <string name="profile_name"> Profile</string>
    <string name="calendar_name"> Calendar</string>
    <string name="schedule_name"> Schedule</string>
    <string name="title_activity_settings">Settings</string>


</resources>
